--- a/numberone.yaml
+++ b/numberone.yaml
@@ -4,8 +4,8 @@
 # run_name contains logfiles and saved models
 # process contains processed data sets
 # if 'root'/'run_name' exists, 'root'/'run_name'_'year'-'month'-'day'-'hour'-'min'-'s' will be used instead.
-root: results/toluene
-run_name: example-run-toluene
+root: results/fullerene
+run_name: example-run-fullerene
 seed: 123                                                                         # model seed
 dataset_seed: 456                                                                 # data set seed
 append: true                                                                      # set true if a restarted run should append to the previous log file
@@ -62,10 +62,11 @@ npz_fixed_field_keys:                                                           
 chemical_symbols:
   - H
   - C
+  - N
 
 # logging
 wandb: true                                                                        # we recommend using wandb for logging
-wandb_project: toluene-example                                                     # project name used in wandb
+wandb_project: fullerene-example                                                     # project name used in wandb
 
 verbose: info                                                                      # the same as python logging, e.g. warning, info, debug, error; case insensitive
 log_batch_freq: 10                                                                 # batch frequency, how often to print training errors withinin the same epoch
