--- a/numberone.yaml
+++ b/numberone.yaml
@@ -5,7 +5,7 @@
 # process contains processed data sets
 # if 'root'/'run_name' exists, 'root'/'run_name'_'year'-'month'-'day'-'hour'-'min'-'s' will be used instead.
 root: results/fullerene
-run_name: example-run-fullerene
+run_name: example-run-fullerene1
 seed: 123                                                                         # model seed
 dataset_seed: 456                                                                 # data set seed
 append: true                                                                      # set true if a restarted run should append to the previous log file
@@ -47,26 +47,23 @@ use_sc: true                                                                    
 # key_mapping is used to map the key in the npz file to the NequIP default values (see data/_key.py)
 # all arrays are expected to have the shape of (nframe, natom, ?) except the fixed fields
 # note that if your data set uses pbc, you need to also pass an array that maps to the nequip "pbc" key
-dataset: exyz                                                                       # type of data set, can be npz or ase
+dataset: ase                          # type of data set, can be npz or ase
+ase_args:
+format: exyz
 dataset_url:                                                                        # url to download the npz. optional
 dataset_file_name: ./all_together                                                  # path to data set file
+include_keys:
+  - user_label
 key_mapping:
-  z: atomic_numbers                                                                # atomic species, integers
-  E: total_energy                                                                  # total potential eneriges to train to
-  F: forces                                                                        # atomic forces to train to
-  R: pos                                                                           # raw atomic positions
-exyz_fixed_field_keys:                                                              # fields that are repeated across different examples
-  - atomic_numbers
-
-# A list of atomic types to be found in the data. The NequIP types will be named with the chemical symbols, and inputs with the correct atomic numbers will be mapped to the corresponding types.
-chemical_symbols:
-  - H
-  - C
-  - N
+  user_label: label0
+chemical_symbol_to_type:
+  H: 0
+  C: 1
+  N: 2
 
 # logging
 wandb: true                                                                        # we recommend using wandb for logging
-wandb_project: fullerene-example                                                     # project name used in wandb
+wandb_project: fullerene-example1                                                     # project name used in wandb
 
 verbose: info                                                                      # the same as python logging, e.g. warning, info, debug, error; case insensitive
 log_batch_freq: 10                                                                 # batch frequency, how often to print training errors withinin the same epoch
