--- a/numberone.yaml
+++ b/numberone.yaml
@@ -5,7 +5,7 @@
 # process contains processed data sets
 # if 'root'/'run_name' exists, 'root'/'run_name'_'year'-'month'-'day'-'hour'-'min'-'s' will be used instead.
 root: results/fullerene
-run_name: example-run-fullerene4
+run_name: example-run-fullerene5
 seed: 123                                                                         # model seed
 dataset_seed: 456                                                                 # data set seed
 append: true                                                                      # set true if a restarted run should append to the previous log file
@@ -50,7 +50,7 @@ use_sc: true                                                                    
 dataset: ase                          # type of data set, can be npz or ase
 ase_args:
         format: extxyz                                                                       # url to download the npz. optional
-dataset_file_name: ./all_together                                                  # path to data set file
+dataset_file_name: ./all_exyz                                                  # path to data set file
 chemical_symbols:
   - H
   - C
@@ -58,7 +58,7 @@ chemical_symbols:
 
 # logging
 wandb: true                                                                        # we recommend using wandb for logging
-wandb_project: fullerene-example4                                                     # project name used in wandb
+wandb_project: fullerene-example5                                                     # project name used in wandb
 
 verbose: info                                                                      # the same as python logging, e.g. warning, info, debug, error; case insensitive
 log_batch_freq: 10                                                                 # batch frequency, how often to print training errors withinin the same epoch
