--- a/numberone.yaml
+++ b/numberone.yaml
@@ -5,7 +5,7 @@
 # process contains processed data sets
 # if 'root'/'run_name' exists, 'root'/'run_name'_'year'-'month'-'day'-'hour'-'min'-'s' will be used instead.
 root: results/fullerene
-run_name: example-run-fullerene5
+run_name: endohedralHe-training
 seed: 123                                                                         # model seed
 dataset_seed: 456                                                                 # data set seed
 append: true                                                                      # set true if a restarted run should append to the previous log file
@@ -52,13 +52,12 @@ ase_args:
         format: extxyz                                                                       # url to download the npz. optional
 dataset_file_name: ./all.exyz                                                  # path to data set file
 chemical_symbols:
-  - H
+  - He
   - C
-  - N
 
 # logging
 wandb: true                                                                        # we recommend using wandb for logging
-wandb_project: fullerene-example5                                                     # project name used in wandb
+wandb_project: endohedralHe-training                                                     # project name used in wandb
 
 verbose: info                                                                      # the same as python logging, e.g. warning, info, debug, error; case insensitive
 log_batch_freq: 10                                                                 # batch frequency, how often to print training errors withinin the same epoch
@@ -67,8 +66,8 @@ save_checkpoint_freq: -1                                                        
 save_ema_checkpoint_freq: -1                                                       # frequency to save the intermediate ema checkpoint. no saving of intermediate checkpoints when the value is not positive.
 
 # training
-n_train: 400                                                                       # number of training data
-n_val: 50                                                                       # number of validation data
+n_train: 3147                                                                       # number of training data
+n_val: 500                                                                       # number of validation data
 learning_rate: 0.005                                                               # learning rate, we found values between 0.01 and 0.005 to work best - this is often one of the most important hyperparameters to tune
 batch_size: 5                                                                      # batch size, we found it important to keep this small for most applications including forces (1-5); for energy-only training, higher batch sizes work better
 validation_batch_size: 10                                                          # batch size for evaluating the model during validation. This does not affect the training results, but using the highest value possible (<=n_val) without running out of memory will speed up your training.
